dsp: move cmsis_dsp basicmath tests
Move the tests to tests/subsys/dsp/ as they'll be a part of the Zephyr
dsp subsystem.

Signed-off-by: Yuval Peress <peress@google.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -331,6 +331,7 @@ CMSIS-DSP integration:
     - modules/Kconfig.cmsis_dsp
     - tests/benchmarks/cmsis_dsp/
     - tests/lib/cmsis_dsp/
+    - tests/subsys/dsp/
   labels:
     - "area: CMSIS-DSP"
 
