dsp: move cmsis_dsp basicmath tests
Move the tests to tests/subsys/dsp/ as they'll be a part of the Zephyr
dsp subsystem.

Signed-off-by: Yuval Peress <peress@google.com>

--- a/tests/subsys/dsp/basicmath/CMakeLists.txt
+++ b/tests/subsys/dsp/basicmath/CMakeLists.txt
@@ -12,3 +12,5 @@ target_sources(app PRIVATE
   )
 
 target_sources_ifdef(CONFIG_CMSIS_DSP_FLOAT16 app PRIVATE src/f16.c)
+
+target_include_directories(app PRIVATE ${ZEPHYR_BASE}/tests/lib/cmsis_dsp)
