dsp: Update tests for basicmath to use dsp subsystem
Update the relevant tests in basicmath to use the dsp subsystem. Note
that f16 is not updated since it's much more architecture specific and
did not become a part of zdsp.

Signed-off-by: Yuval Peress <peress@google.com>

--- a/tests/subsys/dsp/basicmath/CMakeLists.txt
+++ b/tests/subsys/dsp/basicmath/CMakeLists.txt
@@ -11,6 +11,6 @@ target_sources(app PRIVATE
   src/f32.c
   )
 
-target_sources_ifdef(CONFIG_CMSIS_DSP_FLOAT16 app PRIVATE src/f16.c)
+target_sources_ifdef(CONFIG_FP16 app PRIVATE src/f16.c)
 
 target_include_directories(app PRIVATE ${ZEPHYR_BASE}/tests/lib/cmsis_dsp)
