--- a/tests/subsys/dsp/basicmath/testcase.yaml
+++ b/tests/subsys/dsp/basicmath/testcase.yaml
@@ -1,20 +1,20 @@
 tests:
-  libraries.cmsis_dsp.basicmath:
-    filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
+  zdsp.basicmath:
+    filter: TOOLCHAIN_HAS_NEWLIB == 1 or CONFIG_ARCH_POSIX
     integration_platforms:
       - frdm_k64f
       - sam_e70_xplained
       - mps2_an521
       - native_posix
-    tags: cmsis_dsp
+    tags: zdsp
     min_flash: 128
     min_ram: 64
-  libraries.cmsis_dsp.basicmath.fpu:
-    filter: ((CONFIG_CPU_AARCH32_CORTEX_R or CONFIG_CPU_CORTEX_M) and CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
+  zdsp.basicmath.fpu:
+    filter: (CONFIG_CPU_HAS_FPU and TOOLCHAIN_HAS_NEWLIB == 1) or CONFIG_ARCH_POSIX
     integration_platforms:
       - mps2_an521_remote
       - mps3_an547
-    tags: cmsis_dsp fpu
+    tags: zdsp fpu
     extra_configs:
       - CONFIG_FPU=y
     min_flash: 128
