--- a/tests/lib/cbprintf_package/testcase.yaml
+++ b/tests/lib/cbprintf_package/testcase.yaml
@@ -40,6 +40,7 @@ tests:
       - CONFIG_CBPRINTF_COMPLETE=y
       - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
       - CONFIG_FPU=y
+      - CONFIG_MINIMAL_LIBC=y
 
   libraries.cbprintf_package_long_double_align_offset:
     filter: CONFIG_CPU_HAS_FPU
@@ -49,6 +50,7 @@ tests:
       - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
       - CONFIG_COMPILER_OPT="-DCBPRINTF_PACKAGE_ALIGN_OFFSET=1"
       - CONFIG_FPU=y
+      - CONFIG_MINIMAL_LIBC=y
 
   libraries.cbprintf_package_nano:
     extra_configs:
@@ -91,6 +93,7 @@ tests:
       - CONFIG_CBPRINTF_COMPLETE=y
       - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
       - CONFIG_FPU=y
+      - CONFIG_MINIMAL_LIBC=y
 
   libraries.cbprintf_package_long_double_align_offset_cpp:
     filter: CONFIG_CPU_HAS_FPU
@@ -101,6 +104,7 @@ tests:
       - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
       - CONFIG_COMPILER_OPT="-DCBPRINTF_PACKAGE_ALIGN_OFFSET=1"
       - CONFIG_FPU=y
+      - CONFIG_MINIMAL_LIBC=y
 
   libraries.cbprintf_package_nano_cpp:
     extra_configs:
@@ -132,29 +136,6 @@ tests:
       - CONFIG_FPU=y
       - CONFIG_PICOLIBC=y
 
-  libraries.cbprintf_package_long_double.picolibc:
-    filter: CONFIG_CPU_HAS_FPU
-    filter: CONFIG_PICOLIBC_SUPPORTED
-    tags: picolibc
-    extra_configs:
-      - CONFIG_CBPRINTF_FP_SUPPORT=y
-      - CONFIG_CBPRINTF_COMPLETE=y
-      - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
-      - CONFIG_FPU=y
-      - CONFIG_PICOLIBC=y
-
-  libraries.cbprintf_package_long_double_align_offset:
-    filter: CONFIG_CPU_HAS_FPU
-    filter: CONFIG_PICOLIBC_SUPPORTED
-    tags: picolibc
-    extra_configs:
-      - CONFIG_CBPRINTF_FP_SUPPORT=y
-      - CONFIG_CBPRINTF_COMPLETE=y
-      - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
-      - CONFIG_COMPILER_OPT="-DCBPRINTF_PACKAGE_ALIGN_OFFSET=1"
-      - CONFIG_FPU=y
-      - CONFIG_PICOLIBC=y
-
   # Same test but with test compiled as C++
   libraries.cbprintf_package_cpp.picolibc:
     filter: CONFIG_PICOLIBC_SUPPORTED
@@ -181,17 +162,5 @@ tests:
       - CONFIG_CPLUSPLUS=y
       - CONFIG_CBPRINTF_FP_SUPPORT=y
       - CONFIG_CBPRINTF_COMPLETE=y
-      - CONFIG_FPU=y
-      - CONFIG_PICOLIBC=y
-
-  libraries.cbprintf_package_long_double_cpp.picolibc:
-    filter: CONFIG_CPU_HAS_FPU
-    filter: CONFIG_PICOLIBC_SUPPORTED
-    tags: picolibc
-    extra_configs:
-      - CONFIG_CPLUSPLUS=y
-      - CONFIG_CBPRINTF_FP_SUPPORT=y
-      - CONFIG_CBPRINTF_COMPLETE=y
-      - CONFIG_CBPRINTF_PACKAGE_LONGDOUBLE=y
       - CONFIG_FPU=y
       - CONFIG_PICOLIBC=y
