--- a/tests/bluetooth/host/keys/bt_keys_foreach_type/CMakeLists.txt
+++ b/tests/bluetooth/host/keys/bt_keys_foreach_type/CMakeLists.txt
@@ -2,8 +2,6 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
-FILE(GLOB SOURCES src/*.c)
-
 project(bt_keys_foreach_type)
 find_package(Zephyr COMPONENTS unittest HINTS $ENV{ZEPHYR_BASE})
 
@@ -11,3 +9,8 @@ add_subdirectory(${ZEPHYR_BASE}/tests/bluetooth/host host_mocks)
 add_subdirectory(${ZEPHYR_BASE}/tests/bluetooth/host/keys mocks)
 
 target_link_libraries(testbinary PRIVATE mocks host_mocks)
+target_sources(testbinary
+  PRIVATE
+    src/main.c
+    src/test_suite_foreach_type_invalid_inputs.c
+)
