--- a/tests/bluetooth/host/keys/bt_keys_get_addr/CMakeLists.txt
+++ b/tests/bluetooth/host/keys/bt_keys_get_addr/CMakeLists.txt
@@ -2,12 +2,17 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
-FILE(GLOB SOURCES src/*.c)
-
-project(bt_keys_get_addr)
 find_package(Zephyr COMPONENTS unittest HINTS $ENV{ZEPHYR_BASE})
+project(bt_keys_get_addr)
 
 add_subdirectory(${ZEPHYR_BASE}/tests/bluetooth/host host_mocks)
 add_subdirectory(${ZEPHYR_BASE}/tests/bluetooth/host/keys mocks)
 
 target_link_libraries(testbinary PRIVATE mocks host_mocks)
+target_sources(testbinary
+  PRIVATE
+    src/main.c
+    src/test_suite_full_list_invalid_values.c
+    src/test_suite_full_list_no_overwrite.c
+    src/test_suite_full_list_overwrite_oldest.c
+)
