samples: smp: pi: Convert CONFIG_MP_NUM_CPUS handling
Move runtime checks to use arch_num_cpus() and build checks
to use CONFIG_MP_MAX_NUM_CPUS.  This is to allow runtime
determination of the number of CPUs in the future.

Signed-off-by: Kumar Gala <kumar.gala@intel.com>

--- a/samples/arch/smp/pi/sample.yaml
+++ b/samples/arch/smp/pi/sample.yaml
@@ -17,4 +17,4 @@ common:
 tests:
   sample.smp.pi:
     tags: introduction
-    filter: (CONFIG_MP_NUM_CPUS > 1)
+    filter: (CONFIG_MP_MAX_NUM_CPUS > 1)
