--- a/samples/arch/smp/pktqueue/sample.yaml
+++ b/samples/arch/smp/pktqueue/sample.yaml
@@ -14,6 +14,6 @@ common:
 tests:
   sample.smp.pktqueue:
     tags: introduction
-    filter: (CONFIG_MP_NUM_CPUS > 1)
+    filter: (CONFIG_MP_MAX_NUM_CPUS > 1)
     platform_exclude: esp32 esp_wrover_kit esp32_ethernet_kit
       heltec_wifi_lora32_v2 odroid_go olimex_esp32_evb
