--- a/tests/kernel/mp/testcase.yaml
+++ b/tests/kernel/mp/testcase.yaml
@@ -3,7 +3,7 @@ tests:
     tags: kernel smp
     filter: CONFIG_MP_NUM_CPUS > 1
   kernel.multiprocessing.linker_generator:
-    platform_allow: qemu_cortex_m3
+    platform_allow: qemu_x86_64
     tags: kernel smp linker_generator
     filter: CONFIG_MP_NUM_CPUS > 1
     extra_configs:
