tests: kernel: smp: Convert CONFIG_MP_NUM_CPUS handling
Move runtime checks to use arch_num_cpus() and build checks
to use CONFIG_MP_MAX_NUM_CPUS.  This is to allow runtime
determination of the number of CPUs in the future.

Signed-off-by: Kumar Gala <kumar.gala@intel.com>

--- a/tests/kernel/smp/testcase.yaml
+++ b/tests/kernel/smp/testcase.yaml
@@ -1,11 +1,11 @@
 tests:
   kernel.multiprocessing.smp:
     tags: kernel smp ignore_faults
-    filter: (CONFIG_MP_NUM_CPUS > 1)
+    filter: (CONFIG_MP_MAX_NUM_CPUS > 1)
   kernel.multiprocessing.smp.linker_generator:
     platform_allow: qemu_cortex_m3
     extra_configs:
       - CONFIG_TIMESLICING=y
       - CONFIG_CMAKE_LINKER_GENERATOR=y
     tags: kernel smp ignore_faults linker_generator
-    filter: (CONFIG_MP_NUM_CPUS > 1)
+    filter: (CONFIG_MP_MAX_NUM_CPUS > 1)
