--- a/samples/modules/canopennode/sample.yaml
+++ b/samples/modules/canopennode/sample.yaml
@@ -19,7 +19,7 @@ tests:
     platform_exclude: nucleo_h723zg nucleo_h743zi nucleo_h745zi_q nucleo_h753zi
   sample.modules.canopennode.program_download:
     build_only: true
-    platform_exclude: native_posix native_posix_64 rcar_h3ulcb_cr7
+    platform_exclude: native_posix native_posix_64 rcar_h3ulcb_cr7 qemu_x86 qemu_x86_64
     filter: dt_label_with_parent_compat_enabled("slot0_partition", "fixed-partitions") and
             dt_label_with_parent_compat_enabled("slot1_partition", "fixed-partitions") and
             dt_label_with_parent_compat_enabled("storage_partition", "fixed-partitions") and
