--- a/dts/bindings/sensor/ti,ina23x-common.yaml
+++ b/dts/bindings/sensor/ti,ina23x-common.yaml
@@ -27,7 +27,7 @@ properties:
         results in Current, Voltage, and Power registers
         being read in counts.
 
-    rshunt:
+    rshunt-milliohms:
       type: int
       required: true
       description: Shunt resistor value in milliohms
