--- a/.github/workflows/twister.yaml
+++ b/.github/workflows/twister.yaml
@@ -259,21 +259,39 @@ jobs:
           if-no-files-found: ignore
           path: |
             twister-out/twister.xml
+            twister-out/twister.json
             module_tests/twister.xml
             testplan.json
 
   twister-test-results:
     name: "Publish Unit Tests Results"
+    env:
+      OPENSEARCH_USER: ${{ secrets.OPENSEARCH_USER }}
+      OPENSEARCH_PASS: ${{ secrets.OPENSEARCH_PASS }}
     needs: twister-build
     runs-on: ubuntu-20.04
       # the build-and-test job might be skipped, we don't need to run this job then
     if: success() || failure()
 
     steps:
+      # Needed for opensearch and upload script
+      - if: github.event_name == 'push'
+        name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          persist-credentials: false
+
       - name: Download Artifacts
         uses: actions/download-artifact@v2
         with:
           path: artifacts
+
+      - if: github.event_name == 'push'
+        name: Upload to opensearch
+        run: |
+          pip3 install opensearch-py
+          python3 ./scripts/ci/upload_test_results.py artifacts/*/*/twister.json
 
       - name: Merge Test Results
         run: |
