--- a/boards/arm/stm32g071b_disco/stm32g071b_disco.dts
+++ b/boards/arm/stm32g071b_disco/stm32g071b_disco.dts
@@ -143,8 +143,7 @@
 			INA230_CONV_TIME_1100,
 			INA230_CONV_TIME_1100,
 			INA230_AVG_MODE_1)>;
-		/* Set current LSB to 1mA */
-		current-lsb = <1>;
+		current-lsb-microamps = <1000>;
 		rshunt-milliohms = <15>;
 	};
 };
