drivers: pwm: pwm_sam: Add inverted polarity support
Set CPOL bit in Channel Mode Register if the PWM polarity is inverted.

Fixes #51544

Signed-off-by: Pieter De Gendt <pieter.degendt@basalte.be>

--- a/dts/bindings/pwm/atmel,sam-pwm.yaml
+++ b/dts/bindings/pwm/atmel,sam-pwm.yaml
@@ -33,9 +33,10 @@ properties:
       description: Clock divider at the input of the PWM (1 to 255)
 
     "#pwm-cells":
-      const: 2
+      const: 3
 
 pwm-cells:
   - channel
 # period in terms of nanoseconds
   - period
+  - flags
