drivers: ssd1306: Add support for SSD1306 on Feather M0 boards
Add support through Feather connector similar to Arduino.
Files organization inspired from atmel_rf2xx and waveshare_epaper
shields.
Needed re-enabling of support of LVGL on Cortex M0/M0+ previously
disabled due to SDK incompatibility in
166d013311cd8df2267dadd43ed9f754668bb577

Tested successfully with a Feather M0 LoRa and SSD1306 128x64 display.

Signed-off-by: Miguel Dardenne <miguel.dardenne@gmail.com>

fixup

--- a/samples/drivers/display/sample.yaml
+++ b/samples/drivers/display/sample.yaml
@@ -10,16 +10,30 @@ tests:
     harness: console
     harness_config:
       fixture: fixture_display
-  sample.display.shield.ssd1306_128x32:
+  sample.display.shield.ssd1306_128x32_arduino:
     platform_allow: nrf52840dk_nrf52840
-    extra_args: SHIELD=ssd1306_128x32
+    extra_args: SHIELD=ssd1306_128x32_arduino
     tags: display shield
     harness: console
     harness_config:
       fixture: fixture_display
-  sample.display.shield.ssd1306_128x64:
+  sample.display.shield.ssd1306_128x64_arduino:
     platform_allow: nrf52840dk_nrf52840
-    extra_args: SHIELD=ssd1306_128x64
+    extra_args: SHIELD=ssd1306_128x64_arduino
+    tags: display shield
+    harness: console
+    harness_config:
+      fixture: fixture_display
+  sample.display.shield.ssd1306_128x32_feather:
+    platform_allow: adafruit_feather_m0_basic_proto
+    extra_args: SHIELD=ssd1306_128x32_feather
+    tags: display shield
+    harness: console
+    harness_config:
+      fixture: fixture_display
+  sample.display.shield.ssd1306_128x64_feather:
+    platform_allow: adafruit_feather_m0_basic_proto
+    extra_args: SHIELD=ssd1306_128x64_feather
     tags: display shield
     harness: console
     harness_config:
