--- a/dts/x86/intel/elkhart_lake.dtsi
+++ b/dts/x86/intel/elkhart_lake.dtsi
@@ -34,6 +34,8 @@
 	};
 
 	intc: ioapic@fec00000  {
+		#address-cells = <1>;
+		#size-cells = <1>;
 		compatible = "intel,ioapic";
 		reg = <0xfec00000 0x1000>;
 		interrupt-controller;
