drivers: can: make the fake CAN driver generally available
Make the fake CAN controller driver available for use in tests outside of
the CAN shell test.

Signed-off-by: Henrik Brix Andersen <hebad@vestas.com>

--- a/drivers/can/Kconfig
+++ b/drivers/can/Kconfig
@@ -111,6 +111,7 @@ source "drivers/can/Kconfig.native_posix_linux"
 source "drivers/can/Kconfig.sja1000"
 source "drivers/can/Kconfig.esp32"
 source "drivers/can/Kconfig.kvaser"
+source "drivers/can/Kconfig.fake"
 
 source "drivers/can/transceiver/Kconfig"
 
