MAINTAINERS: add Marek as collaborator
Adds Marek Matej as collaborator for the project

Signed-off-by: Sylvio Alves <sylvio.alves@espressif.com>

--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1940,6 +1940,7 @@ Espressif Platforms:
     - uLipe
   collaborators:
     - LucasTambor
+    - marekmatej
   files:
     - drivers/*/*esp32*.c
     - boards/xtensa/esp32*/
