--- a/MAINTAINERS.yml
+++ b/MAINTAINERS.yml
@@ -1945,6 +1945,7 @@ Espressif Platforms:
     - uLipe
   collaborators:
     - LucasTambor
+    - marekmatej
   files:
     - drivers/*/*esp32*.c
     - boards/xtensa/esp32*/
