--- a/.github/workflows/backport_issue_check.yml
+++ b/.github/workflows/backport_issue_check.yml
@@ -9,6 +9,7 @@ jobs:
   backport:
     name: Backport Issue Check
     runs-on: ubuntu-20.04
+    if: github.repository == 'zephyrproject-rtos/zephyr'
 
     steps:
       - name: Check out source code
