can: Multiple SocketCAN instance support.
Adding support for multiple socketCAN interfaces by
making socketCAN driver multi-instanced.
Each socketCAN instance has a corresponding
DT Node named net_canbus<0>,<1>.

The net_canbus DT Node needs to be a child of the CAN DT Node.
The CAN and socketCAN devices can be accessed
by applications by parent child DT macros.
SocketCAN applications can access socketCAN node and
hence the network interface with its node id.

Tested on RDDRONE board.

Signed-off-by: Benjamin Perseghetti <bperseghetti@rudislabs.com>
Co-authored-by: Sumit Batra <sumit.batra@nxp.com>

--- a/boards/arm/rddrone_fmuk66/rddrone_fmuk66.dts
+++ b/boards/arm/rddrone_fmuk66/rddrone_fmuk66.dts
@@ -35,7 +35,8 @@
 		zephyr,console = &lpuart0;
 		zephyr,shell-uart = &lpuart0;
 		zephyr,uart-pipe = &lpuart0;
-		zephyr,canbus = &flexcan0;
+		zephyr,canbus0 = &flexcan0;
+		zephyr,canbus1 = &flexcan1;
 	};
 
 	leds {
