--- a/dts/arm/nxp/nxp_k66.dtsi
+++ b/dts/arm/nxp/nxp_k66.dtsi
@@ -34,6 +34,10 @@
 			sjw = <1>;
 			sample-point = <875>;
 			status = "disabled";
+			net_canbus1 {
+				compatible = "net-canbus";
+				status = "okay";
+			};
 		  };
 	};
 };
