tests: kernel: cleanup test meta-data
Mostly tag cleanup and fixing issues related to bad filtering in the
link_generator scenarios.

Signed-off-by: Anas Nashif <anas.nashif@intel.com>

--- a/tests/kernel/timer/starve/testcase.yaml
+++ b/tests/kernel/timer/starve/testcase.yaml
@@ -1,10 +1,4 @@
 tests:
   kernel.timer.starve:
-    build_only: true
+    slow: true
     tags: kernel timer
-  kernel.timer.starve.linker_generator:
-    platform_allow: qemu_cortex_m3
-    build_only: true
-    tags: kernel timer linker_generator
-    extra_configs:
-      - CONFIG_CMAKE_LINKER_GENERATOR=y
