--- a/lib/posix/CMakeLists.txt
+++ b/lib/posix/CMakeLists.txt
@@ -4,7 +4,7 @@
 zephyr_interface_library_named(posix_subsys)
 
 if(CONFIG_POSIX_API)
-  target_include_directories(posix_subsys INTERFACE ${ZEPHYR_BASE}/include/zephyr/posix)
+  zephyr_include_directories(${ZEPHYR_BASE}/include/zephyr/posix)
 endif()
 
 zephyr_library()
