--- a/dts/bindings/sensor/nxp,fxos8700-common.yaml
+++ b/dts/bindings/sensor/nxp,fxos8700-common.yaml
@@ -3,9 +3,7 @@
 
 description: FXOS8700 6-axis accelerometer/magnetometer sensor
 
-compatible: "nxp,fxos8700"
-
-include: [sensor-device.yaml, i2c-device.yaml]
+include: sensor-device.yaml
 
 properties:
     reset-gpios:
