--- a/dts/bindings/sensor/nxp,fxas21002-common.yaml
+++ b/dts/bindings/sensor/nxp,fxas21002-common.yaml
@@ -3,11 +3,18 @@
 
 description: FXAS21002 3-axis gyroscope sensor
 
-compatible: "nxp,fxas21002"
-
-include: [sensor-device.yaml, i2c-device.yaml]
+include: sensor-device.yaml
 
 properties:
+    reset-gpios:
+      type: phandle-array
+      required: false
+      description: |
+        RST pin
+        This pin defaults to active low when consumed by the sensor.
+        The property value should ensure the flags properly describe
+        the signal that is presented to the driver.
+
     int1-gpios:
       type: phandle-array
       required: false
