--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -75,6 +75,8 @@ source "drivers/sensor/bmm150/Kconfig"
 
 source "drivers/sensor/bmp388/Kconfig"
 
+source "drivers/sensor/bmp581/Kconfig"
+
 source "drivers/sensor/bq274xx/Kconfig"
 
 source "drivers/sensor/ccs811/Kconfig"
