mgmt: mcumgr: Fix Bluetooth transport issues
This fixes issues with the Bluetooth SMP transport whereby deadlocks
could arise from connection references being held in long-lasting
mcumgr command processing functions.

Note: Heavily modified from original PR due to differences in MCUmgr
operation since the Zephyr 2.7 release.

Fixes #51846

Signed-off-by: Jamie McCrae <jamie.mccrae@nordicsemi.no>
(cherry picked from commit 2aca1242f7858bd9ad9f7abb564154cc45743348)

--- a/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt-tiny.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt-tiny.conf
@@ -19,3 +19,6 @@ CONFIG_STATS_NAMES=n
 
 # Disable Logging for footprint reduction
 CONFIG_LOG=n
+
+# Network settings
+CONFIG_NET_BUF_USER_DATA_SIZE=8
