--- a/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
+++ b/samples/subsys/mgmt/mcumgr/smp_svr/overlay-bt.conf
@@ -16,3 +16,6 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2304
 
 # Enable file system commands
 CONFIG_MCUMGR_CMD_FS_MGMT=y
+
+# Network settings
+CONFIG_NET_BUF_USER_DATA_SIZE=8
