--- a/dts/bindings/memory-controllers/nxp,imx-semc.yaml
+++ b/dts/bindings/memory-controllers/nxp,imx-semc.yaml
@@ -5,7 +5,9 @@ description: NXP Smart External Memory Controller (SEMC)
 
 compatible: "nxp,imx-semc"
 
-include: base.yaml
+bus: semc
+
+include: [base.yaml, pinctrl-device.yaml]
 
 properties:
     reg:
