kernel: Clean up DYNAMIC_OBJECTS vs. HEAP_MEM_POOL_SIZE
When DYNAMIC_OBJECTS are selected[1], it makes very little sense to
leave the default kernel heap at zero bytes.  Always give it a little
space.

The one exception is tests/kernel/common's MISRA_SANE=y case, which
ends up putting very large zync objects (maximally-sized rbtree
recursion stacks) there in some configurations (when
CONFIG_WAITQ_SCALABLE=y, which is true on a few of our CI platforms).
Make sure these options are not used together.

[1] Which they always are.  Our test suite kconfig "selects"
    CONFIG_DYNAMIC_OBJECTS whenever CONFIG_TEST_USERSPACE is enabled,
    meaning that it's actually not possible to get coverage of the =n
    case!

Signed-off-by: Andy Ross <andyross@google.com>

--- a/tests/kernel/common/testcase.yaml
+++ b/tests/kernel/common/testcase.yaml
@@ -16,6 +16,8 @@ tests:
       - native_posix
     extra_configs:
       - CONFIG_MISRA_SANE=y
+      - CONFIG_WAITQ_SCALABLE=n
+      - CONFIG_WAITQ_DUMB=y
   kernel.common.nano32:
     filter: not CONFIG_KERNEL_COHERENCE
     extra_configs:
