ppp: fix ppp sample, build with qemu_x86.
Add test to build PPP sample on qemu_x86 and fix compilation.
Define the ppp serial node to be used with PPP on qemu_x86.
Disable NET_TCP for this sample as it breaks compilation.

Signed-off-by: Cyril Fougeray <cyril.fougeray@worldcoin.org>

--- a/boards/x86/qemu_x86/qemu_x86.dts
+++ b/boards/x86/qemu_x86/qemu_x86.dts
@@ -43,6 +43,7 @@
 		zephyr,flash-controller = &sim_flash;
 		zephyr,ieee802154 = &ieee802154;
 		zephyr,canbus = &can0;
+		zephyr,ppp-uart = &uart1;
 	};
 
 	pcie0 {
