--- a/samples/net/sockets/echo_server/sample.yaml
+++ b/samples/net/sockets/echo_server/sample.yaml
@@ -90,3 +90,7 @@ tests:
   sample.net.sockets.echo_server.userspace:
     extra_args: CONFIG_USERSPACE=y OVERLAY_CONFIG="overlay-e1000.conf"
     platform_allow: qemu_x86
+  sample.net.sockets.echo_server.ppp:
+    extra_args: OVERLAY_CONFIG="overlay-ppp.conf"
+    platform_allow: qemu_x86
+    tags: ppp
