--- a/drivers/gpio/Kconfig
+++ b/drivers/gpio/Kconfig
@@ -156,4 +156,6 @@ source "drivers/gpio/Kconfig.s32"
 
 source "drivers/gpio/Kconfig.tca6424a"
 
+source "drivers/gpio/Kconfig.npm6001"
+
 endif # GPIO
