drivers: pinctrl: Microchip XEC PINCTRL add invert pin
Microchip XEC GPIO pins support inverting the output of
alternate pin functions. This feature may be useful for
those peripherals that do not implement output inversion
in the peripheral. GPIO control register pad input and
parallel input register values are not affected by the
function output invert feature. GPIO interrupt detection
of an output is inverted if the invert polarity is enabled.

Signed-off-by: Jay Vasanth <jay.vasanth@microchip.com>

--- a/dts/bindings/pinctrl/microchip,xec-pinctrl.yaml
+++ b/dts/bindings/pinctrl/microchip,xec-pinctrl.yaml
@@ -117,3 +117,10 @@ child-binding:
             is "1x" for most pins. PIO pins are 2, 4, 8, or 12 mA. PIO-24 pins
             are 4, 8, 16, or 24 mA. Please refer to the data sheet for each
             pin's PIO type and default drive strength.
+
+        microchip,output-func-invert:
+          required: false
+          type: boolean
+          description:
+            Invert polarity of an output alternate function. Input functions
+            are not affected.
