--- a/drivers/modem/CMakeLists.txt
+++ b/drivers/modem/CMakeLists.txt
@@ -25,6 +25,11 @@ if(CONFIG_MODEM_QUECTEL_BG9X)
 	zephyr_library_sources(quectel-bg9x.c)
 endif()
 
+if(CONFIG_MODEM_QUECTEL_BG95)
+	zephyr_library_include_directories(${ZEPHYR_BASE}/subsys/net/ip)
+	zephyr_library_sources(quectel-bg95.c)
+endif()
+
 if(CONFIG_MODEM_WNCM14A2A)
 	zephyr_library_include_directories(${ZEPHYR_BASE}/subsys/net/ip)
 	zephyr_library_sources(wncm14a2a.c)
